<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="top"
    android:background="@color/white"
    android:id="@+id/root_constraint"
    android:theme="@style/ThemeOverlay.PhishingApp.FullscreenContainer"
    tools:context=".AddProfileActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="26dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/full_name"
                app:placeholderText="@string/enter_name"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeErrorColor="@android:color/holo_red_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:lines="1"
                    android:inputType="text"
                    android:id="@+id/first_name"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/cnic_number"
                app:placeholderText="@string/enter_number_here"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:lines="1"
                    android:inputType="number"
                    android:maxLength="16"
                    android:id="@+id/cnic_number"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/contact_number"
                app:placeholderText="@string/enter_your_contact_number_here"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:drawableEnd="@drawable/ic_verify"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:lines="1"
                    android:maxLength="20"
                    android:inputType="number"
                    android:id="@+id/verify"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/permanent_address"
                app:placeholderText="@string/enter_your_permanent_address_here"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:inputType="textPostalAddress"
                    android:id="@+id/permanentAddress"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/present_address"
                app:placeholderText="@string/enter_your_present_address_here"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:inputType="textPostalAddress"
                    android:id="@+id/presentAddress"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:id="@+id/isCheck"
                android:paddingEnd="0dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_marginBottom="40dp"
            android:indeterminateTint="@color/primary"
            android:visibility="visible"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />
    </RelativeLayout>

</LinearLayout>