<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.PhishingApp.FullscreenContainer"
    tools:context=".MobileRechargeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="26dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_here"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:placeholderText="@string/enter_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="number"
                android:maxLength="20"
                android:textColor="@color/black"
                android:id="@+id/mobile_number"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:prefixText="@string/rs"
            app:boxStrokeErrorColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="number"
                android:maxLength="20"
                android:hint="@string/rs"
                android:textColor="@color/black"
                android:id="@+id/amount"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:maxImageSize="20dp"
        app:backgroundTint="@color/primary"
        android:layout_gravity="end"
        android:src="@drawable/ic_forward"
        android:id="@+id/mobile_payment"
        android:importantForAccessibility="no" />

</LinearLayout>